--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ a {
 .footer-container {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .footer-p {
@@ -534,6 +535,11 @@ a {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: none;
+}
+
+.is-open {
+  display: block;
 }
 
 .modal-window {
