everything is done

--- a/css/tablets.css
+++ b/css/tablets.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media (max-width: 1158px) {
   /* HEADER */
   .header-container {
     width: 100%;
@@ -35,6 +35,7 @@
   .second-section-list {
     flex-wrap: wrap;
     width: 100%;
+    max-width: 736px;
   }
 
   /* THIRD SECTION */
@@ -62,25 +63,20 @@
     padding: 0;
     width: 100%;
   }
-}
 
-/* FOOTER */
-.footer {
-  padding: 0;
-}
+  /* FOOTER */
 
-.footer-container {
-  display: block;
-  padding: 96px 108px;
-}
+  .footer {
+    padding: 0;
+  }
 
-.footer-text-socials-container {
-  display: flex;
-  align-items: baseline;
-  gap: 24px;
-  margin-bottom: 72px;
-}
+  .footer-container {
+    display: block;
+    padding: 96px 108px;
+    max-width: 100%;
+  }
 
-.footer-logo-p-container {
-  margin: 0;
+  .footer-logo-p-container {
+    margin: 0;
+  }
 }
